--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Set up Elixir
-      uses: erlef/setup-beam@1.20.4
+      uses: erlef/setup-beam@v1.20.4
       with:
         elixir-version: '1.18.4' # [Required] Define the Elixir version
         otp-version: '28.1'      # [Required] Define the Erlang/OTP version
