--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -11,29 +11,92 @@ on:
   pull_request:
     branches: [ "master" ]
 
+# Sets the ENV `MIX_ENV` to `test` for running tests
+env:
+  MIX_ENV: test
+
 permissions:
   contents: read
 
 jobs:
-  build:
-
-    name: Build and test
+  test:
+    # Set up a Postgres DB service. By default, Phoenix applications
+    # use Postgres. This creates a database for running tests.
+    # Additional services can be defined here if required.
+    services:
+      db:
+        image: postgres:12
+        ports: ['5432:5432']
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     runs-on: ubuntu-latest
-
+    name: Test on OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
+    strategy:
+      # Specify the OTP and Elixir versions to use when building
+      # and running the workflow steps.
+      matrix:
+        otp: ['28.1']       # Define the OTP version [required]
+        elixir: ['1.18.4']    # Define the elixir version [required]
     steps:
-    - uses: actions/checkout@v4
+    # Step: Setup Elixir + Erlang image as the base.
     - name: Set up Elixir
       uses: erlef/setup-beam@v1.20.4
       with:
-        elixir-version: '1.18.4' # [Required] Define the Elixir version
-        otp-version: '28.1'      # [Required] Define the Erlang/OTP version
-    - name: Restore dependencies cache
+        otp-version: ${{matrix.otp}}
+        elixir-version: ${{matrix.elixir}}
+  
+    # Step: Check out the code.
+    - name: Checkout code
+      uses: actions/checkout@v3
+  
+    # Step: Define how to cache deps. Restores existing cache if present.
+    - name: Cache deps
+      id: cache-deps
       uses: actions/cache@v3
+      env:
+        cache-name: cache-elixir-deps
       with:
         path: deps
-        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
-        restore-keys: ${{ runner.os }}-mix-
+        key: ${{ runner.os }}-mix-${{ env.cache-name }}-${{ hashFiles('**/mix.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-mix-${{ env.cache-name }}-
+  
+    # Step: Define how to cache the `_build` directory. After the first run,
+    # this speeds up tests runs a lot. This includes not re-compiling our
+    # project's downloaded deps every run.
+    - name: Cache compiled build
+      id: cache-build
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-compiled-build
+      with:
+        path: _build
+        key: ${{ runner.os }}-mix-${{ env.cache-name }}-${{ hashFiles('**/mix.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-mix-${{ env.cache-name }}-
+          ${{ runner.os }}-mix-
+  
+    # Step: Download project dependencies. If unchanged, uses
+    # the cached version.
     - name: Install dependencies
       run: mix deps.get
+  
+    # Step: Compile the project treating any warnings as errors.
+    # Customize this step if a different behavior is desired.
+    - name: Compiles without warnings
+      run: mix compile --warnings-as-errors
+  
+    # Step: Check that the checked in code has already been formatted.
+    # This step fails if something was found unformatted.
+    # Customize this step as desired.
+    - name: Check Formatting
+      run: mix format --check-formatted
+  
+    # Step: Execute the tests.
     - name: Run tests
       run: mix test
